[gd_scene load_steps=15 format=3 uid="uid://dsq2pn6w3a3b5"]

[ext_resource type="Script" path="res://scripts/menud'acceuil.gd" id="1_dr7f2"]
[ext_resource type="Texture2D" uid="uid://c6up7e0ciuarw" path="res://img/new 2.png" id="3_t6hnx"]
[ext_resource type="Texture2D" uid="uid://bfswoverlouty" path="res://img/load.png" id="4_3dcp8"]
[ext_resource type="Texture2D" uid="uid://cx30dcusxuls1" path="res://img/ecrandoisosansoiso.png" id="4_f0rxv"]
[ext_resource type="Texture2D" uid="uid://doqji66e13sou" path="res://img/Evolution deluxe bird edition.png" id="5_165sg"]
[ext_resource type="Texture2D" uid="uid://cjwij02xhsnup" path="res://img/quit (1).png" id="5_ckjxy"]
[ext_resource type="Texture2D" uid="uid://s7omnye7wxw2" path="res://img/colibri fou.png" id="5_wudyk"]
[ext_resource type="Texture2D" uid="uid://w34s2r882lwq" path="res://img/condor zinzin.png" id="6_or4pa"]
[ext_resource type="Texture2D" uid="uid://dpo0ahepatfs8" path="res://img/faucon taré.png" id="7_2fc1b"]
[ext_resource type="AudioStream" uid="uid://cvuo12pe0crnh" path="res://505813_The-Maze-Of-Mayonnaise deluxe edition.mp3" id="10_07kxm"]

[sub_resource type="Animation" id="Animation_p6sh2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("titre:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_wh10v"]
resource_name = "new_animation"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("titre:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_g46fm"]
resource_name = "new_animation_2"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("titre:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0kqqx"]
_data = {
"RESET": SubResource("Animation_p6sh2"),
"new_animation": SubResource("Animation_wh10v"),
"new_animation_2": SubResource("Animation_g46fm")
}

[node name="menud\'acceuil" type="Node2D"]
script = ExtResource("1_dr7f2")

[node name="bg2" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("4_f0rxv")

[node name="Start" type="Button" parent="."]
offset_left = 1587.0
offset_top = 69.0
offset_right = 1848.0
offset_bottom = 153.0
focus_mode = 0
icon = ExtResource("3_t6hnx")
flat = true

[node name="Load" type="Button" parent="."]
offset_left = 1590.0
offset_top = 153.0
offset_right = 1863.0
offset_bottom = 230.0
focus_mode = 0
icon = ExtResource("4_3dcp8")
flat = true

[node name="quitter" type="Button" parent="."]
offset_left = 1586.0
offset_top = 234.0
offset_right = 1840.0
offset_bottom = 328.0
focus_mode = 0
icon = ExtResource("5_ckjxy")
flat = true

[node name="colibri fou" type="Sprite2D" parent="."]
position = Vector2(1606, 794)
texture = ExtResource("5_wudyk")

[node name="condor" type="Sprite2D" parent="."]
position = Vector2(728, 598)
texture = ExtResource("6_or4pa")

[node name="faucon taré" type="Sprite2D" parent="."]
position = Vector2(1038, 918)
texture = ExtResource("7_2fc1b")

[node name="titre" type="Sprite2D" parent="."]
position = Vector2(440, 308)
rotation = -0.23911
texture = ExtResource("5_165sg")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_07kxm")
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0kqqx")
}

[connection signal="mouse_entered" from="Start" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="Start" to="." method="_on_start_mouse_exited"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="Load" to="." method="_on_load_mouse_entered"]
[connection signal="mouse_exited" from="Load" to="." method="_on_load_mouse_exited"]
[connection signal="pressed" from="Load" to="." method="_on_load_pressed"]
[connection signal="mouse_entered" from="quitter" to="." method="_on_quitter_mouse_entered"]
[connection signal="mouse_exited" from="quitter" to="." method="_on_quitter_mouse_exited"]
[connection signal="pressed" from="quitter" to="." method="_on_quitter_pressed"]
